--- a/BlankCordovaApp1/www/css/index.css
+++ b/BlankCordovaApp1/www/css/index.css
@@ -5,47 +5,10 @@
 }
 
 .body {
-    background-color: lightgrey;
+    background-color: #F2F2F2;
 }
 
-body {
-    -webkit-touch-callout: none;
-    -webkit-text-size-adjust: none;
-    -webkit-user-select: none;
-    background-color: #E4E4E4;
-    background-attachment: fixed;
-    font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    font-size: 12px;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    text-transform: uppercase;
-    width: 100%;
-    background-color: lightgrey;
-    font-family: 'RobotoRegular', 'Droid Sans', 'Segoe UI', Segoe, 'San Francisco', 'Helvetica Neue', Helvetica, Arial, Geneva, sans-serif;
-    font-size: 12px;
-}
 
-.app {
-    /*background: url(../images/cordova.png) no-repeat center top; 
-    position: absolute;             
-    left: 50%;
-    top: 50%;
-    height: 50px;                  
-    width: 225px;                   
-    text-align: center;
-    padding: 180px 0px 0px 0px;     
-    margin: -115px 0px 0px -112px;*/
-    background-color:lightgrey;
-}
-
-@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
-    .app {
-        /*background-position:left center;
-        padding:75px 0px 75px 170px;
-        margin:-90px 0px 0px -198px;*/
-    }
-}
 
 h1 {
     font-size:24px;
@@ -107,10 +70,9 @@ h1 {
     color: white;
     background-color: #0484B7;
     background-size: 400px 400px;
-    /*background: linear-gradient(to top,cornflowerblue 20%, white 80%);*/
     background-position: top;
-    font-family: Calibri;
-    font-size: 25px;
+    /*font-family: Impact;*/
+    font-size: 20px;
     text-align: center;
     padding-top: 15px;
     padding-bottom: 0px;
@@ -125,7 +87,7 @@ h1 {
 .searchbut {
     background-color: #0484B7;
     color: white;
-    text-align: center;
+    text-align:center;
     border: 1px solid;
     border-radius: 8px;
     border-color: white;
@@ -134,13 +96,14 @@ h1 {
     top: 0px;
     display: inline-grid;
     padding: 5px 5px;
-    margin: 10px 20px;
+    margin: 5px 20px;
     width: 220px;
+    height: 30px;
 }
 
     .searchbut:hover {
         background-image: none;
-        background-color: white;
+        background-color: #F2F2F2;
         color: #0484B7;
     }
 
@@ -150,7 +113,6 @@ h1 {
     font-size: 12px;
     text-align: center;
     border: 1px solid;
-    /*border-radius: 8px;*/
     border-color: white;
     position: relative;
     display: inline-grid;
@@ -163,9 +125,27 @@ h1 {
 
     .smallbut:hover {
         background-image: none;
-        background-color: white;
+        background-color: #F2F2F2;
         color: #0484B7;
     }
+
+.smallbut1sel {
+    border-radius: 8px 0px 0px 8px;
+    background-color: #F2F2F2;
+    color: #0484B7;
+}
+
+.smallbut1{
+    border-radius: 8px 0px 0px 8px;
+}
+
+.smallbut2sel {
+    background-color: #F2F2F2;
+    color: #0484B7;
+}
+.smallbut3 {
+    border-radius: 0px 8px 8px 0px;
+   }
 
 .input {
     margin: 0px;
@@ -194,18 +174,11 @@ h1 {
     font-size: 16px;
     margin: 4px 10px;
     cursor: pointer;
-
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
 }
 
 .textbottom {
-    text-indent: 0%;
-    white-space: normal;
-    overflow: auto;
     position: relative;
-    top: 55px;
+    top: 60px;
     left: 0px;
     font-size: 18px;
     color: #0484B7;
@@ -219,7 +192,7 @@ h1 {
     overflow: auto;
     background-image: none;
     color: white;
-    background-color: black;
+    background-color: #0484B7;
 }
 
 
